Update UsersController.java